# mergenai

./: 70LART26QPFB00001_Analysis_Report.md  AGENT_IMPROVEMENT_SUMMARY.md  API_KEY_TEST_OZET.md  EXECUTIVE_VALUE_PROPOSITION.md  FINAL_RAG_STATUS.md  FRONTEND_README.md  MERGENAI_FINAL_SUMMARY.md  MERGENAI_IMPLEMENTATION_COMPLETE.md  MERGENAI_MIGRATION_SUMMARY.md  MIMARI.md  OPERATIONS_CHECKLIST.md  OPPORTUNITY_ANALYSIS_README.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUCCESS.md  OPTIMIZATION_SUMMARY.md  PLATFORM_STATISTICS.md  RAG_API_CONNECTION_FIX.md  RAG_INTEGRATION_README.md  RAG_STATUS_SUMMARY.md  SAM_API_Integration_Summary.md  SAM_API_Usage_Guide.md  SOW_Analysis_System_Summary.md  SOW_System_Final_Summary.md  SOW_System_Status_Summary.md  START_RAG_SERVICE.md  STREAMLIT_FIXES_SUMMARY.md  STREAMLIT_OPTIMIZED_FINAL.md  STREAMLIT_SETUP.md  TAM_ANALIZ_OZET.md  TEST_OPTIMIZATIONS.md  Teklif_Raporu_70LART26QPFB00001_20251018_203356.json  Teklif_Raporu_70LART26QPFB00001_20251018_203414.json  UI_IMPROVEMENTS_SUMMARY.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  WORKFLOW_READY.md  WORKFLOW_TEST_BASARILI.md  WORKFLOW_TEST_SUMMARY.md  _convert.py  _fix_text.py  _nonascii.py  (+142 more)
api/: Dockerfile  alembic.ini  pyproject.toml  test_api.py
api/app/: config.py  main.py  models.py  schemas.py
api/app/routes/: compliance.py  proposal.py  rag.py  search.py
api/app/services/compliance/: rules.py
api/app/services/parsing/: excel_reader.py  facility_extractor.py  pastperf_extractor.py  pdf_utils.py  rfq_extractor.py
api/migrations/: env.py
api/scripts/: seed_demo.py
sam/: __init__.py
(+86 files in other folders)
