[project]
name = "zgrbid-api"
version = "0.1.0"
description = "RFQ/SOW Analysis and Proposal Generation API"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.0.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "psycopg2-binary>=2.9.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "rq>=1.15.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.25.0",
  "pdfplumber>=0.10.0",
  "python-multipart>=0.0.6",
  "numpy>=1.24.0",
  "sentence-transformers>=2.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
